2001-03-06  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in: moved xml_print stuff to xml.pl.in. Removed
	  stale set_immediate code.
	* parse.pl.in: xst_parse_replace files. Now it is possible to
	  pass a reference to an array with several files to be replaced
	  from the fn hash. Check time-conf.in (conf_get_parse_table) for
	  an example.
	  (xst_parse_chomp_line_std, xst_parse_chomp_line_hash_comment):
	  line reading routines. The latter remove hash comments.
	  (xst_parse_split): now receives a ref to a sub for the line
	  reading sub, with xst_parse_chomp_line_std as default.
	  (xst_parse_*): pass the line_read_proc param all around.
	* replace.pl.in (xst_replace_from_table): same as xst_parse_replace.
	* time-conf.in: an almost complete rewrite. XML structure changed a
	  bit.
	* xml.pl.in: moved the xst_xml_print* subs here. Renamed xml_print_hash
	  to xst_xml_print_hash_hash, and created new xst_xml_print_hash,
	  which does what its name says.
	
2001-03-05  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_get_debug_path): Implement.

2001-03-05  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in: Added redhat-7.0.

2001-03-05  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in: Implement xst_debug_rotate_try().

2001-03-02  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: add loopback interface if it doesn't exist
	  (ensure_loopback). Add "localhost" and "localhost.localdomain"
	  entries to loopback statichost entry.
	
2001-03-01  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in: Implemented basic debug functions.
	* Makefile.am: Included debug.pl.in in build and install.

2001-03-01  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_run): run command with sh -c.
	* network.pl.in (xst_network_interface_active): make interface discovery
	  platform indpenedent: old method couldn't detect if ifconfig failed.
	
2001-02-28  Hans Petter Jansson  <hpj@ximian.com>
