@@ -375,3 +375,41 @@ sub conf_get_parse_table
   return undef;
 }
 
+sub conf_get_replace_table
+{
+  my %dist_map =
+  (
+   "redhat-6.0" => "redhat-6.2",
+   "redhat-6.1" => "redhat-6.2",
+   "redhat-6.2" => "redhat-6.2",
+   "redhat-7.0" => "redhat-6.2"
+   );
+
+  my %dist_tables =
+      (
+       "redhat-6.2" =>
+       {
+         fn =>
+         {
+           NTP_CONF     => "/etc/ntp.conf",
+           STEP_TICKERS => "/etc/ntp/step-tickers",
+           ZONEINFO     => "/usr/share/zoneinfo",
+           LOCAL_TIME    => "/etc/localtime"
+         },
+         table =>
+             [
+              [local_time,  \&time_set_local_time],
+              [timezone,    \&time_set_rh62_zone, [LOCAL_TIME, ZONEINFO]],
+              [sync,        \&xst_parse_split_all_hash_comment, NTP_CONF, "server", "[ \t]+"],
+              [sync_active, \&xst_rh62_service_status, "xntpd"],
+              ]
+                }
+       );
+
+  my $dist = $dist_map {$xst_dist};
+  return %{$dist_tables{$dist}} if $dist;
+
+  #FIXME: warn about unsupported platform.
+  return undef;
+}
+
